# pysnr

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pytest.yml
docs/source/: conf.py  index.rst  modules.rst  pysnr.rst  quickstart.rst  tools.rst  usage.rst
pysnr/: __init__.py  sfdr.py  sinad.py  snr.py  thd.py  toi.py  utils.py
test/: test_sfdr.py  test_sinad.py  test_snr.py  test_thd.py  test_toi.py  test_utils.py
test/data/: alias_data.mat  cosine_data.mat  sine_data.mat  toi_data.mat
