[metadata]
name = pysnr
version = 0.0.1
author = Sambit Paul
author_email = sambitpaul1992@gmail.com
description = Computing Signal-to-Noise Ratio (based on MATLAB implementation)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/psambit9791/pysnr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy ~=1.22
    scipy ~=1.8.1